# otputils

./: .gitignore  AUTHORS.md  COPYING.md  ChangeLog.md  Makefile.am  NEWS.md  README.md  TODO.md  acinclude.m4  autogen.sh  builddevenv.sh  buildenv.sh  configure.ac
build-aux/: git-tar-name.txt
docs/: wordlist.txt
examples/: totp-example.c
include/: otputil.h  otputil_compat.h  totputils.h
lib/libotputil/: lbv.c  lbv.h  lcore.c  lcore.h  ldict-otp-md4.c  ldict-otp-md5.c  ldict-otp-sha1.c  ldict-rfc1760.c  ldict-rfc1760.h  ldict-rfc2289-md4.c  ldict-rfc2289-md4.txt  ldict-rfc2289-md5.c  ldict-rfc2289-md5.txt  ldict-rfc2289-sha1.c  ldict_rfc1760.c  lhotp.c  lhotp.h  libotputil.c  libotputil.h  libotputil.sym  lmisc.c  lmisc.h  lotp-rfc2289.c  lotp-rfc2289.h  lotp.c  lotp.h  lrfc1760-skey-dict.c  lrfc1760-skey-dict.h  lrfc1760-skey.c  lrfc1760-skey.h  lrfc2289-otp-dict.c  lrfc2289-otp-dict.h  lrfc2289-otp.c  lrfc2289-otp.h  lrfc4226-hotp.c  lrfc4226-hotp.h  lrfc6238-totp.c  lrfc6238-totp.h  lskey-dict.c  lskey-rfc1760-dict.c  (+1 more)
lib/libtotputils/: lencoding.c  lencoding.h  lerror.c  lerror.h  libtotputils.c  libtotputils.h  libtotputils.sym  lmemory.c  lmemory.h
src/: otp-altdict.c  otputil.c  otputil.h  totp.c  totp.h  widget-code.c  widget-generate.c  widget-hotp.c  widget-info.c  widget-otp.c  widget-skey.c  widget-totp.c  widget-verify.c
src/totp/: main.c  main.h  totputilities.c  totputilities.h  widget-encode.c  widget-encode.h
tests/: base32-decoding.c  base32-encoding.c  base32-validate.c  base32hex-decoding.c  base32hex-encoding.c  base32hex-validate.c  base64-decoding.c  base64-encoding.c  base64-validate.c  crockford-decoding.c  crockford-encoding.c  crockford-validate.c  hex-decoding.c  hex-encoding.c  hex-validate.c  otp-data-convert.c  otp-data-dump.c  otp-data-generate.sh  otp-data.c  otp-data.h  test-dict-otp.c  test-hotp.c  test-otp-decode.c  test-otp-encode.c  test-otp.c  test-otputil-hotp.sh  test-otputil-otp.sh  test-otputil-totp.sh  test-strings.c  test-strings.h  test-totp.c  tests.c  tests.h
tests/otp-dicts/: otp-dicts.h  otp-md4.c  otp-md4.txt  otp-md5.c  otp-md5.txt  otp-sha1.c  otp-sha1.txt  rfc2289-md4.c  rfc2289-md5.c  rfc2289-md5.txt  rfc2289-sha1.c  rfc2289-sha1.txt
